2008-10-06  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/ViMode.cs: Implement a simple vi-like editing mode.
	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/SimpleEditMode.cs,
	  Mono.TextEditor/EditMode.cs: Abstract out the editing into a mode
	  object.
	* Mono.TextEditor/DefaultEditActions.cs: Add soem new actions for
	  jumping to zero/home.
	* Mono.TextEditor.mdp, Makefile.am: Updated.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditorOptions.cs: text editor options are now
	  disposable.

2008-09-30  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/SharpDevelopWordFindStrategy.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/EmacsWordFindStrategy.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Refactorey word
	  strategy (moved to text editor options/added '_' treatment switch).

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/SharpDevelopWordFindStrategy.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/IWordFindStrategy.cs,
	  Mono.TextEditor/EmacsWordFindStrategy.cs: Added emacs/sharpdevelop
	  find word strategies.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed 'Bug 430512 - Editor
	  forcefully reformats my code incorrectly'.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextViewMargin.cs:
	  fixed 'Bug 424443 - Many cursors shown when pressing the Down key
	  for a while'.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: fixed 'Bug 429738 - Middle-click paste
	  past end of row pastes in next line'.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor.Tests,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,